--- a/slides/luca-de-feo.html
+++ b/slides/luca-de-feo.html
@@ -169,7 +169,20 @@ Suppose that $w<X$, and $g$ is *small enough*, then $g(w) = 0$ in $ℤ$.
 
 ---
 
-# Howegrawe-..., May
+# Slightly more generally
+
+### Theorem (Coppersmith, Howgrawe-Graham, May)
+
+Let $f$ be a polynomial of degree $d$, let $N$ be an integer. All
+integers $w$ with
+
+$$|w| < N^{β^2/d}$$
+
+such that
+
+$$\gcd(f(w), N) ≥ N^β$$
+
+can be found in polynomial time in $d$ and $\log N$.
 
 ---
 
